Including modifications on files.